# falcon-starknet

./: .gitignore  .tool-versions  Cargo.toml  Makefile  README.md  snfoundry.toml
benches/: RESULTS.md  bench.sh
codegen/: Cargo.toml
codegen/src/: circuit.rs  emit.rs  lib.rs  main.rs  ntt.rs
docs/: coworker-note.md  implementation.tex
reference/: Cargo.toml
reference/src/: falcon_codec.rs  lib.rs
