[package]
name = "falcon-reference"
version = "0.1.0"
edition = "2021"

# Thomas Pornin's public-domain FN-DSA (standard SHAKE256) — authoritative
# reference + KAT/test-vector generator for the Cairo verifier.
[dependencies]
fn-dsa = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "gen-vectors"
path = "src/bin/gen_vectors.rs"
